tabela cadastro linkada com banco de dados

--- a/SaborBrasil/appsettings.json
+++ b/SaborBrasil/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
  "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=saborbrasil;user=root;password=;"
+    "DefaultConnection": "server=localhost;port=3306;database=mydb;user=root;password=1234;"
   }
 }
