--- a/SaborBrasil/SaborBrasil.csproj
+++ b/SaborBrasil/SaborBrasil.csproj
@@ -7,14 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.13" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.13">
-    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    <PrivateAssets>all</PrivateAssets>
-  </PackageReference>
-  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
-</ItemGroup>
+    <!-- Remova a linha abaixo -->
+    
+  </ItemGroup>
 
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.13">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
+  </ItemGroup>
 
 </Project>
