--- a/SaborBrasil/Properties/launchSettings.json
+++ b/SaborBrasil/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5172",
+      "applicationUrl": "http://0.0.0.0:5172",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
