--- a/SaborBrasil/Properties/launchSettings.json
+++ b/SaborBrasil/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7237;http://localhost:5172",
+      "applicationUrl": "https://0.0.0.0:7237;http://0.0.0.0:5172",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
